# SmallShrimp

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
benchmarks/: __init__.py  recall_keyword.py
benchmarks/unit/memory/: __init__.py  dataset.py  recall_keyword.py
default_workspace/: config.example.yaml
docs/: hooks-system-design.md  memory-architecture-v2.md  memory-layer-design.md  system-prompt-design.md
src/SmallShrimp/channels/: __init__.py  base.py  discord_channel.py  telegram_channel.py  wecom_app_channel.py  wecom_channel.py
src/SmallShrimp/cli/: chat.py  main.py
src/SmallShrimp/core/: agent.py  agent_loader.py  context.py  context_guard.py  correction.py  cron_loader.py  eventbus.py  events.py  (+16 more)
tests/: conftest.py  test_agent_def.py  test_agent_loader.py  test_agent_memory_system.py  test_channels.py  test_commands.py  test_concurrency.py  test_config.py  test_context.py  test_context_guard.py  test_correction.py  test_cron.py  test_delivery_worker.py  test_dispatch.py  test_eventbus.py  test_events.py  test_failure_learning.py  test_history.py  test_mcp.py  test_memory.py  test_memory_agent_integration.py  test_memory_dedup.py  test_memory_e2e.py  test_memory_full.py  test_memory_lru.py  test_memory_ranking.py  test_message.py  test_multi_stage_compaction.py  test_parallel_tools.py  test_permissions.py  test_post_message_and_memory.py  test_prompt_builder.py  test_routing.py  test_sandbox.py  test_security_integration.py  test_shell_guard.py  test_skill_def.py  test_skill_loader.py  test_skill_tool.py  test_tool_guardrails.py  (+6 more)
(+58 files in other folders)
